<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/new_game"
        android:title="@string/new_game"
        android:showAsAction="never" android:orderInCategory="50"/>
    <item android:id="@+id/new_item"
        android:title="@string/new_item"
        android:showAsAction="never" android:orderInCategory="60"/>
    <item android:id="@+id/delete_mode"
        android:title="@string/delete_mode"
        android:showAsAction="never" android:orderInCategory="70"/>
    <item android:id="@+id/save"
        android:title="@string/save_menu" android:orderInCategory="80">
    </item>
    <item android:id="@+id/load"
        android:icon="@drawable/ic_help"
        android:title="@string/load_menu" android:orderInCategory="90">
    </item>
    <item android:id="@+id/help"
        android:title="@string/help" android:orderInCategory="100">
    </item>
</menu>
